# pokerBot

./:   game.cpp  .clangd  .gitignore  CMakeLists.txt  build.sh  exec.sh
.cache/clangd/index/: FILE.h.3E2187E08D11E118.idx  __sigval_t.h.4EE558E3F2780E3A.idx  algorithmfwd.h.14F34C834ED374AB.idx  align.h.5494118AD529CE49.idx  aligned_buffer.h.8EE052AAD3560DE8.idx  alloc_traits.h.7ED6955E7AD16F96.idx  alloc_traits.h.F1A64BF6445CADDD.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.4AFD46821EA88DAE.idx  allocator.h.B3FB8292591D6F88.idx  any.9FB89F60E9A9FD47.idx  array.A490162283CE7F6D.idx  atomic.B1F75531F002A454.idx  atomic_base.h.98692E5C1A09ED30.idx  atomic_lockfree_defines.h.716873E8B193E59D.idx  atomic_wait.h.620F2D534846801E.idx  atomic_word.h.5E745FB4088CABE8.idx  atomicity.h.C7466C2D4C12E80D.idx  auto_ptr.h.9053A4D89CD3CAB5.idx  basic_ios.h.56903B99DC4D5E6A.idx  basic_ios.tcc.D00A38F22813AC99.idx  basic_string.h.FA0A6D60AB4FD289.idx  basic_string.tcc.4BB4F100F6A713CA.idx  binders.h.0CBCB90998D4A78A.idx  bit.F5C80D49E047A1D1.idx  bitsperlong.h.961A03A9766DEA03.idx  bitsperlong.h.B514790BD8072FE7.idx  c++config.h.A758E8FF275E0068.idx  c++locale.h.3AED9ECEC2F10A4E.idx  cassert.CEA99048A31C0E7A.idx  cctype.395BFEBDBC0749E0.idx  cdefs.h.FC477E759ACAD3AA.idx  cerrno.40094D6F95660A53.idx  char_traits.h.47D68E0463E3A7F5.idx  charconv.h.47B28727F4970BB8.idx  climits.297433AE90970C56.idx  clocale.9F377BA5CCC1045B.idx  clock_t.h.7C390066B7BA63AD.idx  clockid_t.h.7492A2D657E428F9.idx  codecvt.h.6FD062F3DEA647CA.idx  (+271 more)
bugs/: foldBug.txt
include/: IGameIO.hpp  bestHand.hpp  cards.hpp  game.hpp  manager.hpp  player.hpp
src/: bestHand.cpp  bestHand.cppm  cards.cpp  cards.cppm  game.cpp  main.cpp  manager.cpp  player.cpp  player.cppm  stdImports.cppm  temp.cpp
src/game/: gameActions.cpp  gameCtor.cpp  gameFlow.cpp  gameHelpers.cpp  gameInterfaceIO.cpp
src/game/DifferentTypeInterfaces/: ConsoleGameIO.cpp
src/temp/: bestHand.cppm  cards.cppm  player.cppm
tests/: cards_test.cpp  manager_test.cpp  player_test.cpp
